--- a/.github/workflows/Clang-Format.yml
+++ b/.github/workflows/Clang-Format.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        token: ${{ github.TOKEN }}
     - name: Format
       uses: DoozyX/clang-format-lint-action@v0.11
       with:
