--- a/.github/workflows/Clang-Format.yml
+++ b/.github/workflows/Clang-Format.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        token: ${{ github.TOKEN }}
+        token: ${{ secrets.TOKEN }}
     - name: Format
       uses: DoozyX/clang-format-lint-action@v0.11
       with:
